--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.27.2",
+    "file-saver": "^2.0.5",
+    "xlsx": "^0.18.5"
   }
 }
